MQTT/sts.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mqtt-ibm-mq
  namespace: NAMESPACE
  labels:
    app.kubernetes.io/component: integration
    app.kubernetes.io/instance: mqtt
    app.kubernetes.io/name: ibm-mq
    app.kubernetes.io/version: 9.3.4.0
spec:
  serviceName: qm
  revisionHistoryLimit: 10
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: integration
        app.kubernetes.io/instance: mqtt
        app.kubernetes.io/name: ibm-mq
        app.kubernetes.io/version: 9.3.4.0
      annotations:
        cloudpakId: c8b82d189e7545f0892db9ef2731b90d
        productVersion: 9.3.4.0
        productID: 21dfe9a0f00f444f888756d835334909
        cloudpakName: IBM Cloud Pak for Integration
        productChargedContainers: qmgr
        productCloudpakRatio: '4:1'
        productName: IBM MQ Advanced for Non-Production
        productMetric: VIRTUAL_PROCESSOR_CORE
    spec:
      restartPolicy: Always
      serviceAccountName: mqtt-ibm-mq
      schedulerName: default-scheduler
      affinity: {}
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 1Gi
          readinessProbe:
            exec:
              command:
                - chkmqready
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          terminationMessagePath: /run/termination-log
          name: qmgr
          #command: ["sleep"]
          #args: ["999999999"]
          livenessProbe:
            exec:
              command:
                - chkmqhealthy
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 1
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 1414
              protocol: TCP
            - containerPort: 1833
              protocol: TCP
            - containerPort: 9157
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tlsdefault
              readOnly: true
              mountPath: /etc/mqm/pki/keys/default
            - name: data
              mountPath: /mnt/mqm
            - name: cm-mqtt-config
              readOnly: true
              mountPath: /etc/mqm/script.mqsc
              subPath: script.mqsc
            - name: cm-mqtt-config
              readOnly: true
              mountPath: /etc/mqm/tls.ini
              subPath: tls.ini
          terminationMessagePolicy: File
          image: 'IMAGE_REFERENCE'
      serviceAccount: mqtt-ibm-mq
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-mqtt-ibm-mq-0
        - name: cm-mqtt-ibm-mq-web
          configMap:
            name: mqtt-ibm-mq-web
            items:
              - key: mqwebuser.xml
                path: mqwebuser.xml
            defaultMode: 432
        - name: tlsdefault
          secret:
            secretName: mqtt-tls
            items:
              - key: tls.key
                path: tls.key
              - key: tls.crt
                path: tls.crt
              - key: ca.crt
                path: ca.crt
            defaultMode: 288
        - name: cm-mqtt-config
          configMap:
            name: mqtt-config
            items:
              - key: script.mqsc
                path: script.mqsc
            defaultMode: 420
        - name: openshift-service-ca
          configMap:
            name: openshift-service-ca.crt
            items:
              - key: service-ca.crt
                path: openshift-service-ca.crt
            defaultMode: 420
      dnsPolicy: ClusterFirst
  podManagementPolicy: OrderedReady
  replicas: 1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: integration
      app.kubernetes.io/instance: mqtt
      app.kubernetes.io/name: ibm-mq
